corrected CSS (overflowing wrapper on phone)

--- a/style.css
+++ b/style.css
@@ -9,10 +9,11 @@ body {
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
+	width: 100%;
 	font-family: 'Montserrat', sans-serif;
-	color: rgb(255, 255, 255);
+	color: rgb(221, 221, 221);
 	background-image: linear-gradient(315deg, #323366 0%, #8ba061 74%);
-	font-size: 20px;
+	font-size: 16px;
 }
 
 h1 {
@@ -39,7 +40,8 @@ input::placeholder {
 
 button {
 	padding: 10px;
-	margin-left: 20px;
+	margin-left: 70px;
+	margin-top: 20px;
 	color: #fff;
 	font-weight: bold;
 	background: none;
@@ -56,9 +58,8 @@ button:hover {
 
 .wrapper {
 	width: 800px;
-	padding: 20px 40px;
+	/* padding: 5px 10px; */
 	background-color: rgba(0, 0, 0, 0.55);
-
 	border-radius: 25px;
 }
 
@@ -78,6 +79,7 @@ button:hover {
 }
 
 .city-name {
+	padding-left: 10px;
 	font-size: 40px;
 }
 
@@ -114,6 +116,30 @@ button:hover {
 
 .warning {
 	margin-top: 10px;
+	margin-left: 10px;
 	font-size: 14px;
 	color: tomato;
+}
+
+@media (min-width: 576px) {
+	body {
+		font-size: 20px;
+	}
+
+	.wrapper {
+		padding: 20px 40px;
+	}
+	button {
+		padding: 10px;
+		margin-left: 20px;
+	}
+	.city-name {
+		padding: 10px;
+		font-size: 40px;
+	}
+	.warning {
+		margin-top: 10px;
+		font-size: 14px;
+		color: tomato;
+	}
 }
